[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Menus/Menu.gd" type="Script" id=1]
[ext_resource path="res://Art/Backgrounds/starting-scene-bg.png" type="Texture" id=2]
[ext_resource path="res://Art/Buttons/Any-Key/play2.png" type="Texture" id=9]
[ext_resource path="res://Art/Buttons/Any-Key/play1.png" type="Texture" id=10]

[node name="Menu" type="Control"]
script = ExtResource( 1 )

[node name="parallax_bg" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="parallax_bg"]
motion_mirroring = Vector2( 960, 0 )

[node name="bg2" type="ColorRect" parent="parallax_bg/ParallaxLayer"]
show_behind_parent = true
margin_left = 3.05176e-05
margin_right = 960.0
margin_bottom = 544.0
color = Color( 0, 0, 0, 1 )

[node name="bg" type="TextureRect" parent="parallax_bg/ParallaxLayer"]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 10, 10 )
texture = ExtResource( 2 )

[node name="Play" type="TextureButton" parent="."]
margin_left = 392.0
margin_top = 216.0
margin_right = 420.0
margin_bottom = 230.0
rect_scale = Vector2( 6, 6 )
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 9 )

[node name="Tween" type="Tween" parent="."]

[node name="tween_bg" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="tween_play" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
[connection signal="timeout" from="tween_bg" to="." method="_on_tween_bg_timeout"]
[connection signal="timeout" from="tween_play" to="." method="_on_tween_play_timeout"]
